initial route setup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<home></home>
+<div class="l-container bg-dark">
+  <div class="container">
+    <app-navbar></app-navbar>
+  </div>
+</div>
+
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
