--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,10 @@
-<p>
-  about works!
-</p>
+<div class="home">
+  <h1>About Vivek</h1>
+
+  <p>My name is Vivek and I am a 28 year old Frontend Engineer living in San Francisco, CA.</p>
+  <p>I grew up in Miami, FL and attended the Universtiy of Florida to study Electircal Engineering as an undergraduate.</p>
+  <p>I started my career as a Hardware Sales Engineer, but after 4 years I decided to pursue my passion for coding and enter the startup world.</p>
+  <p>I love building web applications and most of my experience is in the Enterprise SaaS world.</p>
+  
+</div>
+  
