--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" routerLink="/home">Vivek's Page</a>
+<nav class="navbar navbar-expand-lg navbar-dark">
+  <a class="navbar-brand" routerLink="/home">Vivek Tumrukota</a>
   <button class="navbar-toggler" type="button" 
     data-toggle="collapse" 
     data-target="#navbarNavAltMarkup"
@@ -10,7 +10,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" routerLink="/home">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" routerLink="/about">About</a>
       <a class="nav-item nav-link" href="#">Experience</a>
       <a class="nav-item nav-link" href="#">Contact</a>          
