--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,8 +30,7 @@
           #name="ngModel"
         />
         <span class="input-group-btn">
-          <button class="btn btn-secondary" 
-            type="button"
+          <button class="btn btn-secondary" type="button"
             (click)="saveEmail()">
             Submit
           </button>
