--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,7 +12,7 @@
     <div class="navbar-nav">
       <a class="nav-item nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" routerLink="/about">About</a>
-      <a class="nav-item nav-link" href="#">Experience</a>
+      <a class="nav-item nav-link" routerLink="/experience">Experience</a>
       <a class="nav-item nav-link" href="#">Contact</a>          
     </div>
   </div>
