--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,7 +3,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
-  background-color: white;
+  background-color: black;
   color: black;
 }
 
