--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,20 +8,21 @@
     aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+  <div layout="row" layout-align="start center" class="collapse navbar-collapse" id="navbarNavAltMarkup" flex="30">
     <div class="navbar-nav">
       <a class="nav-item nav-link" routerLink="/about">About</a>
-      <a class="nav-item nav-link" routerLink="/experience">Experience</a>
+      <!-- <a class="nav-item nav-link" routerLink="/experience">Experience</a> -->
       <a class="nav-item nav-link" href="#">Contact</a>          
     </div>
   </div>
-  <div layout="row" layout-align="end center">
-    <ol class="social-media" *ngIf="$ctrl.socialMedia">
-      <li class="social-link" *ngFor="let social of $ctrl.socialMedia;">
-        <a href="social.link" ng-src="social.icon">
-          Test
+  <div layout="row" layout-align="start center" class="social-media">
+    <ul class="social-media-links">
+      <li class="social-link" layout="row" layout-align="start center"
+        *ngFor="let social of socialMedia">
+        <a href="{{social.link}}" target="_blank">
+          <img [src]="social.icon">
         </a>
       </li>
-    </ol>
+    </ul>
   </div>
 </nav>
