--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,21 +20,11 @@
       </div>
     </div>
     <div class="row">
-      <h3>Get In Contact With Me!</h3>  
+      <h3>
+        <a href="mailto:vtumrukota@gmail.com">Get In Contact With Me!</a>
+      </h3>  
       <div class="input-group input-group-lg">
-        <input type="email" class="form-control" 
-          placeholder="Email Address" 
-          aria-label="Email Address" 
-          aria-describedby="sizing-addon1"
-          [(ngModel)]="emailInput"
-          #name="ngModel"
-        />
-        <span class="input-group-btn">
-          <button class="btn btn-secondary" type="button"
-            (click)="saveEmail()">
-            Submit
-          </button>
-        </span>
+        
       </div>
     </div>
   </div>
